* Pass event object to EventObserver callbacks. [Prototype LH #150] [jddalton, Morus Walter]

* Confirm fuse.String#match and fuse.RegExp#exec don't return sparse arrays in Opera 9.25 or Safari 3.x. [Prototype LH #946] [jay, jddalton]

* Avoid setting style overflow via cssText in setStyle() because it causes bugs in IE and Konqueror. [jddalton, kangax]

* Support fallback for Safari 2.x event.isMiddleClick() support. [Prototype LH #731] [Arthur Schreiber, Frank, jddalton]

* Make setOpacity() method treat a value of 1 and an empty string differently. [Prototype LH #684] [david brillard, jddalton] 

* Make setStyle() method avoid throwing errors when passing falsy values. [Prototype LH #558] [garrett, jddalton]

* Make setStyle() method support hyphenated style properties. [Prototype LH #970] [jddalton, zeno]

* Fix fuse.Fusebox wrappers for Number methods toExponential(), toFixed(), and toPrecision(). [jddalton]

* Add `fractionDigits` argument to fuse.Number#round. [Prototype LH #830] [jddalton, Radoslav Stankov]

* Ensure fuse.Fusebox Native methods that return arrays set index values in accending order so de facto order is preserved in for-in loops. [jddalton]

* Rename the fuse.dom.Data object to fuse.dom.data. [jddalton]

* Avoid calling decorator instance method focus() in Form focusFirstControl(). [Diego Perini, jddalton]

* Make fuse.dom.InputElement.EventObserver registerCallback() method use fuse.get() to resolve the `element` argument. [jddalton]

* Rename Form methods getElements() to getControls(), findFirstElement() to getFirstControl(), and focusFirstElement() to focusFirstControl(). [jddalton]
  Note: Backwards compatibility warning.

* Cleanup and optimize form/field files and ensure the getValue/setValue methods are consistent across form control elements. [jddalton]

* Add UA sniff to the fuse.env.agent.IE flag to avoid cases where others have added a window.attachEvent method. [Prototype LH #997] [jddalton, PaulC]
